--- a/docs/src/styles/_main.scss
+++ b/docs/src/styles/_main.scss
@@ -42,6 +42,9 @@
 }
 
 .main__aside {
+  // Prevents flash of unstyled content on mobile
+  visibility: hidden;
+
   .drawer__dialog {
     background-color: tokens.get("background-shift");
     outline: none;
@@ -54,6 +57,7 @@
 
 @include core.media-min("aside") {
   .main__aside {
+    visibility: visible;
     position: sticky;
     z-index: 1;
     top: tokens.get("layout", "header-height");
